--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<ul>
                   		        <li><a href="#1">简介</a></li>  
 					<!--		<li><a href="/auth/login">登录</a></li>    -->
-								<li><a href="https://wikicc.net" style="text-transform: none;">最新域名：https://vvoo.in</a></li>
+								<li><a href="https://vvoo.in" style="text-transform: none;">最新域名：https://vvoo.in</a></li>
                    <!--        	<li><a href="#4">联系</a></li>      -->
 								<li><a href="javascript:addFavorite()">
     <span class="glyphicon glyphicon-heart"></span> <b>加入收藏</b></a></li> 
