--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>VO云最新域名</title>
+		<title>VO云最新域名+</title>
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
         <meta charset="utf-8" />
